--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,16 +1,21 @@
-name: Pull Request
-on: pull_request
+name: Build and Push Prod Image
+run-name: ${{ github.actor }} pushing to dev environemnt
+on:
+  push:
+    branches:
+      - dev
+  workflow_dispatch: { }
 permissions:
   id-token: write # required for hashicorp/vault-action
   contents: read  # required for actions/checkout
 concurrency:
-  group: "${{ github.workflow }}-${{ github.head_ref }}"
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 jobs:
   Execute:
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE_TAG: "${{ github.head_ref }}-${{ github.sha }}"
+      DOCKER_IMAGE_TAG: "prod-${{ github.sha }}"
     steps:
       - name: Import Secrets
         uses: hashicorp/vault-action@v2
@@ -33,8 +38,6 @@ jobs:
           registry: ${{ env.CONTAINER_REGISTRY_SERVER }}
           username: ${{ env.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ env.CONTAINER_REGISTRY_PASSWORD }}
-      - name: Sanitize Image Tag
-        run: echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG//[^a-zA-Z0-9-_]/}" >> "$GITHUB_ENV"
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
