--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -1,8 +1,9 @@
-name: Main
+name: Build and Push UAT Image
+run-name: ${{ github.actor }} pushing to dev environemnt
 on:
   push:
     branches:
-      - main
+      - dev
   workflow_dispatch: { }
 permissions:
   id-token: write # required for hashicorp/vault-action
@@ -14,7 +15,7 @@ jobs:
   Execute:
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE_TAG: "dev-${{ github.sha }}"
+      DOCKER_IMAGE_TAG: "uat-${{ github.sha }}"
     steps:
       - name: Import Secrets
         uses: hashicorp/vault-action@v2
