--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,6 @@
-uvicorn~=0.25.0
 fastapi~=0.109.0
+uvicorn~=0.23.1
+requests==2.32.0
 prometheus_fastapi_instrumentator~=6.1.0
+python-dotenv
+jinja2
