--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} pushing to dev environemnt
 on:
   push:
     branches:
-      - dev
+      - uat
   workflow_dispatch: { }
 permissions:
   id-token: write # required for hashicorp/vault-action
